# ETHDubai-2022-Workshop

./: .gitignore  README.md
docs/: README.md  index.html  package-lock.json
docs/css/: reveal.scss
docs/css/theme/template/: exposer.scss
docs/plugin/: solidity.js
docs/plugin/highlight/: highlight.esm.js  highlight.js  plugin.js
docs/plugin/markdown/: markdown.esm.js  markdown.js
docs/plugin/notes/: notes.esm.js  notes.js
docs/plugin/search/: search.esm.js  search.js
docs/slides/: README.md  compiler.md  exercise_0.md  exercise_1.md  exercise_2.md  exercise_3.md  exercise_4.md  fuel.md  intro.md  thanks.md  title.md  whats_next.md
exercise0/: README.md
exercise0/hello_world/: Cargo.toml  Forc.toml
exercise1/: README.md
exercise1/ex1/: Cargo.toml
exercise1/solution/: Forc.toml
exercise1/solution/src/: main.sw
exercise2/: README.md
exercise2/incrementor_abi/: Forc.toml
exercise2/incrementor_contract/src/: main.sw
exercise2/incrementor_test/: Forc.toml
exercise2/incrementor_test/src/: main.sw
exercise2/solution/incrementor_abi/: Forc.toml
exercise2/solution/incrementor_contract/: :wq  Cargo.toml  Forc.toml  [  log  log.ir
exercise2/solution/incrementor_test/: Cargo.toml  Forc.toml  log
exercise3/: README.md
exercise3/solution/incrementor_abi/: Cargo.toml
exercise3/solution/incrementor_abi/src/: main.sw
exercise3/solution/incrementor_contract/: Cargo.toml  Forc.toml  debug-good  good.ir
exercise4/: README.md
exercise4/solution/swayswap_abi/: Cargo.toml  Forc.toml
exercise4/solution/swayswap_contract/: Cargo.toml  Forc.toml  bad.ir  debug  f.ir  final-good.ir  final.ir  good.ir  log.ir
exercise4/solution/swayswap_contract/src/: main.sw
exercise4/solution/swayswap_contract/tests/: harness.rs
exercise4/solution/swayswap_test/: Forc.toml  log
exercise4/solution/token_abi/: Forc.toml
exercise4/solution/token_contract/: Forc.toml
pres/: exercise_2.md  exercise_2_backup.md  exercise_3.md  exercise_4.md  intro.md  learn.md  rust.md  solidity.md  sway.md  thanks.md  title.md  using_sway.md
(+6 files in other folders)
