[project]
authors = ["Mohammad"]
edition = "2021"
license = "Apache-2.0"
name = "ex1"
version = "0.1.0"

[dependencies]
fuel-gql-client = { version = "0.4", default-features = false }
fuel-tx = "0.6"
fuels-abigen-macro = "0.6"
fuels-contract = "0.6"
fuels-core = "0.6"
rand = "0.8"
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
