[package]
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"
name = "tests"
version = "0.0.0"

[dependencies]
fuel-core = { git = "https://github.com/FuelLabs/fuel-core", branch = "master" }
fuel-gql-client = { version = "0.4", default-features = false }
fuel-tx = { git = "https://github.com/FuelLabs/fuel-tx", branch = "master" }
fuel-types = "0.3"
fuel-vm = { git = "https://github.com/FuelLabs/fuel-vm", branch = "master" }
fuels-abigen-macro = { git = "https://github.com/FuelLabs/fuels-rs", branch = "rodrigo/variable-outputs" }
fuels-signers = { git = "https://github.com/FuelLabs/fuels-rs", branch = "rodrigo/variable-outputs" }
fuels-contract = { git = "https://github.com/FuelLabs/fuels-rs", branch = "rodrigo/variable-outputs" }
fuels-core = { git = "https://github.com/FuelLabs/fuels-rs", branch = "rodrigo/variable-outputs" }
rand = "0.8"
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "tests"
path = "tests/harness.rs"
